# openGL-TEST

./: .gitignore  CMakeLists.txt  Makefile  README.md  cb  fcb
shaders/: cube_frag.glsl  cube_vert.glsl  cursor_frag.glsl  cursor_vert.glsl  floor_vert.glsl  light_source_frag.glsl  light_source_vert.glsl  lit_object_frag.glsl  lit_object_vert.glsl  shader.frag  shader.vert
src/: bullet.cpp  bullet.hpp  camera.cpp  camera.h  camera.hpp  cube.cpp  cube.hpp  floor.cpp  floor.hpp  game.cpp  game.hpp  main.cpp  projectile.cpp  projectile.hpp  pyramid.cpp  pyramid.hpp  rect.cpp  rect.hpp  scenery.cpp  scenery.hpp  shaders.cpp  shaders.h  shaders.hpp  shape.cpp  shape.hpp  square.h
src/lighting/: light_source.cpp  light_source.hpp
src/projectiles/: bullet.cpp  bullet.hpp  projectile.cpp  projectile.hpp
src/shapes/: cube.cpp  cube.hpp  pyramid.cpp  pyramid.hpp  shape.cpp  shape.hpp  sphere.cpp  sphere.hpp
src/ui/: cursor.cpp  cursor.hpp
src/world/: floor.cpp  floor.hpp  scenery.cpp  scenery.hpp
utils/: constants.hpp
